# ot-harjoitustyo

./: .coverage  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: scores.sqlite  test-scores.sqlite
dokumentaatio/: arkkitehtuurikuvaus.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimuusmaarittely.md
hirsipuu_peli/: .gitignore
hirsipuu_peli/src/gamelogic/: event_queue.py  letter_positions.py  menu.py
hirsipuu_peli/src/images/: load_images.py
hirsipuu_peli/src/words/: words.txt  (+1 more)
htmlcov/: .coverage  index.html  src_clock_py.html  src_display_py.html  src_event_queue_py.html  src_gamelogic_clock_py.html  src_gamelogic_event_queue_py.html  src_gamelogic_gameloop_py.html  src_gamelogic_letter_positions_py.html  src_gamelogic_menu_py.html  src_gamelogic_words_py.html  src_gameloop_py.html  src_letter_positions_py.html  src_load_images_py.html  src_words_config_py.html  src_words_py.html  src_words_words_repository_py.html  status.json
laskarit/viikko1/: gitlog.txt
laskarit/viikko3/: tehtava1ja2.md  tehtava3.md  tehtava4.md
src/: build.py  clock.py  config.py  database.db  database_connection.py  display.py  event_queue.py  gameloop.py  index.py  initialize_database.py  letter_positions.py  load_images.py  piece.py  renderer.py  shapes.py
src/gamelogic/: clock.py  event_queue.py  gameloop.py  letter_positions.py  menu.py  words.py
src/repositories/: highscores.py
src/tests/: game_loop_test.py  menu_test.py  words.py
src/ui/: display.py  load_images.py
src/words/: config.py  words.txt  words_repository.py
(+13 files in other folders)
